<resources>
    //MainActivity
    <string name="app_name">Pet Finder</string>
    <string name="feed_and_find"><b>Feed and Find:</b>\nA pet monitoring system on\nembedded collar technology.</string>
    <string name="todo">todo</string>

    //DashBoard items
    <string name="name_assigned">Name Goes Here</string>
    <string name="pet_breed">Pet Breed Goes Here</string>

    //About
    <string name="about">ABOUT</string>
    <string name="about_info">The pet tracker developed by team Koinu is a cutting-edge mobile application that offers a comprehensive suite of features to help pet owners monitor the whereabouts, activity, and health of their beloved furry friends. Developed as part of The Feed and Find Initiative, this innovative app harnesses the power of embedded collar technology to provide real-time tracking of pets.\n\nWith this pet tracker, pet owners can stay up-to-date on the behavior and activity levels of their pets, enabling them to better understand and respond to the needs of their pets. In addition, the app offers access to a pet social network, allowing pet owners to connect with other pet lovers and share experiences and advice.</string>

    //Credits
    <string name="credits">CREDITS</string>
    <string name="credits_info"><b>The Feed and Find Initiative Team</b>\nCheryl Marie Chomis Alimba\nHyrum Roi Sapurco Bravo\nJasper Daile Tuibeo Corpuz\nJohn Homer Sayno Dar\nAr-jay De La Fuente\nKirby Ann Aycardo De Los Reyes\nAngelo Millares Echano\nArriana Mae Vargas Malubay\nIvan Meir Pablo Morada\nRenze Meinard Mortiga\nWendee Davillo Postre\nChristine Magana Toral\nKai Lapak Yaneza\n\n<b>Team Koinu</b>\nCheryl Marie Chomis Alimba\nAngelo Millares Echano\nArriana Mae Vargas Malubay\nIvan Meir Pablo Morada\nRenze Meinard Mortiga\nChristine Magana Toral\nKai Lapak Yaneza\n\n<b>Circuit Designers</b>\nAngelo Millares Echano\nKai Lapak Yaneza\n\n<b>Mobile Developers</b>\nCheryl Marie Chomis Alimba\nAngelo Millares Echano\nArriana Mae Vargas Malubay\nIvan Meir Morada\nKai Lapak Yaneza\n\n<b>Researchers</b>\nRenze Meinard Mortiga\nChristine Magana Toral\n\n<b>Special Thanks To:</b>\nTeam Lumos\nThe Institute of Computer Studies\nCamarines Norte State College\n3A Glass and Aluminum Works and Services\nand\nProfessor Marc Lester Acunin</string>
    <string name="logo">logo</string>
    <string name="app">Feed and Find:</string>
    <string name="open">open</string>
    <string name="close">close</string>

    //Navigation
    <string name="strDashboard">Dashboard</string>
    <string name="strCredits">Credits</string>
    <string name="strAbout">About</string>
    <string name="strReports">Reports</string>
    <string name="strOther">Other</string>
    <string name="strFeeder">Feeder</string>
    <string name="navigation_header">navigation header</string>
    <string name="my_app">My App</string>
    <string name="addbtn_descrip">Add Pet</string>

    //Info
    <string name="profile_information">Profile Information:</string>
    <string name="name">Name</string>
    <string name="breed">Breed</string>
    <string name="age">Age</string>
    <string name="sex">Sex</string>
    <string name="birthdate">Birthdate</string>
    <string name="weight">Weight</string>
    <string name="health_information">Health Information</string>
    <string name="allergies">Allergies</string>
    <string name="treats">Treats</string>
    <string name="restrictions">Restrictions</string>
    <string name="medications">Medications</string>
    <string name="vet_name">Vet Name</string>
    <string name="contact_information">Contact Information</string>
    <string name="physical_address">Physical Address</string>
    <string name="contact_number">Contact Number</string>
    <string name="email_address">Email Address</string>

    <string name="password">Password</string>
    <string name="add_pet">Add Pet</string>
    <string name="address">Address:</string>
    <string name="birthday_label">Birthday:</string>
    <string name="personal_information">Personal Information</string>
    <string name="pet_name">Pet Name</string>
    <string name="pet_type_and_breed">Pet Type and Breed</string>
    <string name="birthday">Birthday</string>
    <string name="sex_input">Sex</string>
    <string name="birthday_input">Birthday</string>
    <string name="pet_name_label">Pet Name:</string>
    <string name="pet_type_and_breed_label">Pet Type and Breed:</string>
    <string name="birthday_text">Birthday:</string>
    <string name="pet_informationLabel">Pet Information</string>
    <string name="contact_informationLabel">Contact Information</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="health_informationLabel">Health Information</string>
    <string name="vet_contact">Vet Contact:</string>
    <string name="cancelBtn">CANCEL</string>
    <string name="submitBtn">SUBMIT</string>
    <string name="deviceNum">Device ID: 0001</string>
    <string name="updateBtn">UPDATE</string>
    <string name="strTrash">Trash</string>
    <string name="strLocation">Location</string>
    <string name="strPet_profile">Pet Profile</string>
    <string name="show_location">Show Location</string>
    <string name="location">Location</string>
    <string name="radar">Radar</string>
    <string name="username">Username</string>
    <string name="date_format">MM/DD/YYYY</string>
    <string name="strSearch">Search</string>
    <string name="strDelete_all">Delete Al</string>
    <string name="strSort">Sort</string>
    <string name="StrDelete_all_records">Delete All Records</string>
    <string name="hello_world">Hello World</string>

    <string name="show_list">Show List</string>
    <string name="hide_list">Hide List</string>

    //Location
    <string name="mapAPIKey">AIzaSyCQ7cZSLgPwcQwAQGkfe7jKnRRWVSzuVHA</string>

    //Device
    <string name="strDevice">Configure Device</string>
    <string name="add_device">Add_device</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="set_perimeter">Set Perimeter</string>
    <string name="set_device">Select Bluetooth</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="bt_name">BT Name</string>
    <string name="mac_address">MAC Address</string>
    <string name="geofence_instruction">Click anywhere on the map or you can use the buttons below to set the marker.</string>
    <string name="phone_location">Use Phone\'s Location</string>
    <string name="collar_location">Use Collar\'s \nLocation</string>
    <string name="geofence_radius">Radius</string>
    <string name="geofence">Geofence</string>
    <string name="onBoarding1">We are excited to have you on board. With Pet Finder, you can easily track and manage your pets with advanced features and seamless integration. Let\'s explore what we can offer!</string>
    <string name="onBoarding2">Keep an eye on your furry friends\' whereabouts using our GPS tracking feature. Never lose sight of them again!</string>
    <string name="onBoarding3">Monitor your pets\' activity levels with the built-in pedometer. Stay informed about their daily exercise routines.</string>
    <string name="onBoarding4">Generate comprehensive reports to track your pets\' health, activities, and more. Access valuable insights with just a few taps.</string>
    <string name="onBoarding5">Pet Finder seamlessly integrates with our Pet Feeder app. Sync your data effortlessly for a holistic pet care experience.</string>
    <string name="onBoarding6">Please note that the GPS Tracking feature uses NEO-6M GPS Module which requires an active GPS satellite signal in your vicinity to function. Be sure to use it in an area with good GPS coverage.</string>
    <string name="onBoarding7">Now that you\'re up and ready to take care of your beloved pets, Pet Finder is here to support you every step of the way. Happy pet parenting!</string>
</resources>